--- a/uploader/index.html
+++ b/uploader/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
         <div class="drop-elm">
+            <input type="file" class="browse d-none" multiple>
             <i class="fa-solid fa-cloud-arrow-up"></i>
         </div>
 
@@ -27,9 +28,7 @@
                 <th scope="col">Remove</th>
               </tr>
             </thead>
-            <tbody>
-                
-            </tbody>
+            <tbody></tbody>
           </table>
     </div>
 </body>
